--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=docker-demo-1
-spring.datasource.url=jdbc:postgresql://g52-postgres:5433/g52
+spring.datasource.url=jdbc:postgresql://localhost:5433/g52
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
