--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=docker-demo-1
-spring.datasource.url=jdbc:postgresql://localhost:5433/g52
+spring.datasource.url=jdbc:postgresql://p_g52:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
